--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "frozen-ui",
+  "name": "kitty-ui",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "jdfrozen <616769416@qq.com>",
+  "description": "kitty ui project",
+  "author": "Louis",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,8 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.8.2",
-    "vue": "^2.5.2"
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.6",
+    "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.0",
+    "vue": "^2.5.2",
+    "vue-i18n": "^8.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -26,12 +32,15 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "element-theme": "^2.0.1",
+    "element-theme-chalk": "^2.4.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -45,7 +54,6 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-router": "^3.0.6",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
